tests/NormalTests/paczka1/fuzzy1/26084547.err
Error in line 2: VuV S852 57,4
Error in line 3: VuV A615 94,9
Error in line 12: yThm S8@@ 40,9
Error in line 18: S329
Error in line 1: yThm S329 35,2
Error in line 17: PStTxCHzi S833 1,5
Error in line 24: PStTxCHzi A615 60,8
Error in line 20: yThm S833 0,4
Error in line 31: VuV S833 26,8
